<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">kokhanevych3</string>
    <string name="label" tools:ignore="PrivateResource">digits</string>
    <string name="number_one">1</string>
    <string name="number_six">6</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="number_zero">0</string>
    <string name="number_four">4</string>
    <string name="number_seven">7</string>
    <string name="all_clear">AC</string>
    <string name="clear">C</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="cons">-</string>
    <string name="division">/</string>
    <string name="number_five">5</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="equal">=</string>
    <string name="Digits">TextView</string>
    <string name="digits">Digits</string>
    <string name="Point">.</string>

</resources>